versioned_docs/version-1.8.0/changelog/version/v1.8.x/v1.8.0.md
---
sidebar_position: 96
---

# v1.8.0

发布日期：2022 年 06 月 07 日

:::info 公告：代码仓库目录夹整顿


优化项目代码结构，方便贡献者更快地了解洞态项目，将代码仓库目录夹进行整顿调整 **[GitHub - HXSecurity/DongTai](https://github.com/HXSecurity/DongTai)**。

```
	.
	├── deploy
	├── dongtai_common   各个服务调用的常用函数和类
	├── dongtai_conf 	 配置文件
	├── dongtai_engine   漏洞检测与漏洞处理部分
	├── dongtai_protocol dongtai-server 和 Agent 交互的协议
	├── dongtai_web      与 Web 交互的 Api
	├── static           静态文件
	└── test             测试用例
```
:::

## **致谢-贡献者**

* [yuligesec](https://github.com/yuligesec)：[修正 K8S 部署中 Linux Shell 找不到镜像的 bug](https://github.com/HXSecurity/DongTai/pull/598)

* [Maskhe](https://github.com/Maskhe)：[修正筛选未运行的 Agent 却筛选出了全部 Agent 的 bug](https://github.com/HXSecurity/DongTai/pull/592)

* [madneal](https://github.com/madneal)：[修正 Go Agent 注册的逻辑](https://github.com/HXSecurity/DongTai-agent-go/pull/33)

* [iBreaker](https://github.com/iBreaker)：[新增两个 Go Agent hook 函数，分别是 chiURLParam 和 chiServerHTTP](https://github.com/HXSecurity/DongTai-agent-go/pull/27)

* [iBreaker](https://github.com/iBreaker)：[修正 Go Agent httpRouter FMT() 参数 bug](https://github.com/HXSecurity/DongTai-agent-go/pull/28)

* [jusk9527](https://github.com/jusk9527)：[修正 Go Agent sqlDbquery bug](https://github.com/HXSecurity/DongTai-agent-go/pull/31)

## **DongTai-IAST**

* 新增 Agent 管理页面，页面中涵盖的功能包含：Agent 仪表版、Agent 状态、Agent 启停、Agent 日志、Agent 升级

	参数详见：[Agent 管理](../../../operation/agent-management)

* 优化SCA 漏洞信息展示 CVE、CNNVD、CNVD、CWE编号展示（列表/详情）

	参数详见：[应用漏洞- 组件漏洞详情](../../../operation/vul-management#组件漏洞详情)

* 优化 Agent 熔断降级配置调整，提供预设熔断配置以及可自定义新增熔断降级策略、支持熔断降级条件及关系配置

	参数详见：[应用漏洞- 组件漏洞详情](../../../operation/agent-management#熔断降级)

* 优化服务端稳定性：OpenAPI、Engine代码优化

* 优化策略配置：支持配置不同漏洞类型的 Payload、修改引擎的逻辑

* 降低误报：应用唯一 ID 方式解决漏洞重放验证稳定性，解决误报问题

* ^ 取消组织管理；仅支持单用户

* ^ 取消报告导出功能

* ^ 取消组件报告导出功能

* ^ 取消 API 主动测试功能

## **DongTai-agent-java**

* 支持 API 接口响应时间熔断降级阈值配置（界面化）
	
	参数详见：[Agent 管理 - 熔断降级](../../../operation/agent-management#熔断降级)

![Image](images/setting-response-time.png)

* 支持检测未设置安全漏洞的 cookies

* ^ 支持 GRPC 框架的安全漏洞检测

* ^ 支持 Kafka、MySQL 分布式链路监控

* Agent 日志优化

   * 当日志级别设置为`debug`时，输出报告内容等信息

   * 日志上传服务，可以在服务器端下载本地代理日志

		参数详见：[Agent 管理 - 查询 Agent 日志](../../../operation/agent-management#查询-agent-日志)

   * 本地日志默认输出在系统临时文件目录下，命名为 `项目名-版本号-UUID`

	```bash title="样例"
	/tmp/WebGoat-8.2.2-0651c960350843b1bb051d5b6d4dc46d

	/apache-tomcat-8.5.692/temp/WebGoat-8.2.2-7494bcb1477c469686addff4294e33d5
	```

* 修复 Agent 使用 Attach 模式启动时，JVM 内存激增的 bug


## **DongTai-agent-python**

* 新增了组件上报功能

## **DongTai-agent-go**

* 新增了组件上报功能

* 调整了 Agent 版本获取方式

* 优化了探针执行效率

* ^ 新增了跨服务追踪功能

## **DongTai-Docs**

* 新增 Java Agent 的性能测试报告

	参数详见：[Java Agent 性能测试报告](../../../testing-report/java-agent-perfomance)

* 新增靶场漏洞检测报告

	参数详见：[靶场漏洞检测报告](../../../testing-report/vul-testing)

* 新增 Java Agent 中间件 Sofa 的安装教学

	参数详见：[Sofa 的安装教学](../../../getting-started/agent/install-java-agent/#spring-bootnettyjettysofa)

* 新增 K8S 扩容文档

	参数详见：[K8S 扩容文档](../../../getting-started/server/deploy-kubernetes#扩容)

* 新增洞态 Java Agent 持续集成样例

	参数详见：[洞态 Java Agent 持续集成样例](../../../category/%E6%8C%81%E7%BB%AD%E9%9B%86%E6%88%90)

* 新增洞态 Go/PHP Agent 参数配置文档

	参数详见：[洞态 GO Agent 参数配置文档](../../../getting-started/agent/parameter/config-go-agent)

	参数详见：[洞态 PHP Agent 参数配置文档](../../../getting-started/agent/parameter/config-php-agent)

:::note 洞态商业版本在 2022 年 05 月 18 日 发布

^ 功能仅 **商业版可用**，开源版与商业版差异，请参阅以下附件：

![Image](images/edition-comparison.jpeg)

参数详见：[商业版试用](https://wenjuan.feishu.cn/m/cfm?t=sco0FBT1ZCCi-rxpt)

:::

